[tool.poetry]
name = "kuibit"
version = "1.3.5"
description = "Read and analyze Einstein Toolkit simulations."
authors = ["Gabriele Bozzola <gabrielebozzola@arizona.edu>"]
maintainers = ["Gabriele Bozzola <gabrielebozzola@arizona.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sbozzolo/kuibit"
repository = "https://github.com/sbozzolo/kuibit"
documentation = "https://sbozzolo.github.io/kuibit"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sbozzolo/kuibit/issues"

[tool.poetry.dependencies]
python = "^3.6.1, <3.11"
numpy = [
    { version = "^1.18.5", python = ">=3.6, <3.10" },
    { version = "^1.21.4", python = ">=3.10" },
]
scipy = "^1.5.2"
h5py = ">=2.9.0"
numba = { version = "^0.53.1", optional = true, python = ">=3.6, <3.10"}
lalsuite = { version = "^6.77", optional = true }
pycbc = { version = "^1.16.10", optional = true }
ConfigArgParse = "^1.2.3"
matplotlib = "^3.3.2"
motionpicture = "^0.2.0"
argcomplete = "^1.12.3"
tikzplotlib = [
            { version = ">=0.9.5, <=0.9.12", python = ">=3.6, <3.7" },
            { version = "^0.9.5", python = ">=3.7" },
]
py-expression-eval = "^0.3.14"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3"
Sphinx = "^3.2.1"
jupyter = "^1.0.0"
mayavi = "^4.7.4"
jedi = "^0.17.2"
snakeviz = "^2.1.0"
nbsphinx = "^0.8.6"
isort = "^5.0.0"
flake8 = "^3.9.2"

[tool.poetry.extras]
full = ["numba", "lalsuite", "pycbc"]

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | docs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

