[tool.poetry]
name = "kuibit"
version = "1.4.0"
description = "Read and analyze Einstein Toolkit simulations."
authors = ["Gabriele Bozzola <gabrielebozzola@arizona.edu>"]
maintainers = ["Gabriele Bozzola <gabrielebozzola@arizona.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sbozzolo/kuibit"
repository = "https://github.com/sbozzolo/kuibit"
documentation = "https://sbozzolo.github.io/kuibit"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sbozzolo/kuibit/issues"

[tool.poetry.dependencies]
python = "^3.7, <3.12"
numpy = [{ version = "^1.21.0", python = "<3.8" },
         { version = "^1.23.0", python = ">=3.8" }]
scipy = [{ version = "^1.7.0", python = "<3.8" },
         { version = "^1.9.0", python = ">=3.8" }]
h5py = "^3.2.0"
numba = [{ version = ">=0.50, ^0", optional = true, python = "<3.8"},
         { version = ">=0.57, ^0", optional = true, python = ">=3.8"}]
ConfigArgParse = "^1.2.3"
matplotlib = "^3.5.0"
motionpicture = ">=0.2.0, ^0"
argcomplete = "^2.0.0"
tikzplotlib = ">=0.9.13, ^0"
py-expression-eval = ">=0.3.14, ^0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
coverage = "^6.3"
Sphinx = "^4.3.0"
jupyter = "^1.0.0"
jedi = ">=0.18.1, ^0"
snakeviz = "^2.1.0"
nbsphinx = ">0.8.10, ^0"
isort = "^5.10.0"
flake8 = "^4.0.0"
mypy = ">=0.931, ^0"
sphinx-autodoc-typehints = "^1.17.0"
sphinxcontrib-citations = ">=0.1.1, ^0"

[tool.poetry.extras]
full = ["numba"]

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | docs
)/
'''

[tool.isort]
line_length = 79
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
